# Heartdisease_prediction

./: app.py  pyproject.toml  requirements.txt  rf_42features_columns.pkl  rf_42features_model.pkl
