[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart_disease_app"
version = "0.1.0"
authors = [
    { name = "Hayden Meng", email = "haydenmeng136@gmail.com" }
]
description = "A Streamlit application for data visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.25.0",
    "numpy>=1.25.0",
    "pandas>=2.1.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0"
]

[tool.setuptools]
packages = { find = {} }
include-package-data = true